<resources>
    <string name="app_name">MvpArms</string>

    <!-- 登录 -->
    <string name="login">登录</string>
    <string name="login__slogan">欢迎登录，帮助您快速管理</string>
    <string name="login__account">账号</string>
    <string name="login__enter_account">请输入账号</string>
    <string name="login__password">密码</string>
    <string name="login__enter_password">请输入密码</string>
    <string name="login__captcha">验证码</string>
    <string name="login__enter_captcha">请输入验证码</string>
    <string name="login__remember_me">记住我</string>
    <string name="login__sign_in_now">立即登录</string>
    <string name="login__login_successful">登录成功！</string>

    <!-- 切换域名 -->
    <string name="switch_domain">切换域名</string>
    <string name="switch_domain__dialog_message">是否切换域名？</string>
    <string name="switch_domain__cancel">取消</string>
    <string name="switch_domain__ok">确定</string>

    <!-- 对话框 -->
    <string name="dialog">对话框</string>

    <!-- 气泡提示 -->
    <string name="balloon">气泡提示</string>

    <!-- 下拉框 -->
    <string name="dropdown">下拉框</string>

    <!-- 版本更新 -->
    <string name="upgrade">版本更新</string>

    <!-- Fragment示例 -->
    <string name="fragment_demo">Fragment示例</string>

    <!-- 防抖点击示例 -->
    <string name="debounce_click_demo">防抖点击示例</string>

    <!-- 打印示例 -->
    <string name="print_demo">打印示例</string>

    <!-- 搜索输入框 -->
    <string name="search_edittext_demo">搜索输入框</string>

    <!-- 消息 -->
    <string name="message_demo">消息推送</string>

    <!-- 条码解析 -->
    <string name="barcode">条码解析</string>

    <!-- 列表-加载更多 -->
    <string name="rv_load_more">列表-加载更多</string>

    <!-- 字典 -->
    <string name="dict">字典</string>

    <!-- 图片预览 -->
    <string name="open_image">图片预览</string>

    <!-- 文件下载 -->
    <string name="file_download">文件下载</string>

    <!-- 图片选中 -->
    <string name="picture_selector">图片选择</string>
</resources>